--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
   width: 200px;
   height: 200px;
   display: flex;
+  justify-content: center;
   align-items: center;
   background-color: #aaa;
   box-sizing: border-box;
@@ -21,4 +22,73 @@ body {
 
 #products .product-active {
   border: 1px solid #000;
+}
+
+/* Calc */
+
+#calc {
+  width: 350px;
+  background-color: #7df497;
+  width: 400px;
+  padding: 20px 10px;
+  position: relative;
+  border: 2px solid;
+}
+
+.display {
+  margin: 5px auto;
+  width: 250px;
+  height: 25px;
+  font-size: 25px;
+  text-align: right;
+  border: 1px solid #000;
+  padding: 5px;
+}
+
+#num1,
+#operator {
+  position: absolute;
+  left: 50px;
+  top: 26px;
+  font-size: 12px;
+}
+
+#operator {
+  left: 40px;
+}
+
+.keyNumber {
+  width: 250px;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  border: 1px solid #000;
+  padding: 5px;
+}
+
+.keyNumber div {
+  width: 65px;
+  margin: 2px;
+  text-align: center;
+  border: 1px solid #000;
+  padding: 5px;
+  cursor: pointer;
+}
+
+.keySingn {
+  display: flex;
+  justify-content: space-around;
+  width: 250px;
+  margin: 5px auto;
+  padding: 5px;
+}
+
+.keySingn div {
+  width: 60px;
+  margin: 2px;
+  text-align: center;
+  border: 1px solid #000;
+  padding: 5px;
+  cursor: pointer;
 }
