--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,24 @@
 body {
   background-color: #eee;
 }
+
+.items {
+  display: flex;
+  justify-content: space-around;
+}
+
+.items .item {
+  width: 100px;
+  height: 100px;
+  background-color: red;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.items .item-active {
+  border: 1px solid #000;
+  background-color: yellow;
+  box-sizing: border-box;
+}
