--- a/css/style.css
+++ b/css/style.css
@@ -3,22 +3,23 @@ body {
 }
 
 .carousel {
-  position: relative;
-  max-width: 800px;
-  margin: auto;
+  width: 860px;
+  margin: 0 auto;
+  text-align: center;
 }
 
-.carousel .item {
+.carouselItems {
+  position: relative;
+  height: 670px;
+}
+
+.carouselItems .item {
   position: absolute;
   opacity: 0;
-  transition: all 1s ease-in-out;
+  transition: all 1s;
 }
 
-.carousel .item:first-of-type {
+.carouselItems .item-active {
   opacity: 1;
-}
-
-.carousel .item-active {
-  opacity: 1;
-  transition: all 1s ease-in-out;
+  transition: all 1s;
 }
