--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,58 @@
 body {
-  background-color: #eee;
+  margin: 0;
+  position: relative;
+}
+
+.popup {
+  display: none;
+  position: fixed;
+  z-index: 999;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.overlay {
+  background-color: rgba(0, 0, 0, 0.466);
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+}
+
+.popupContainer {
+  display: flex;
+  background-color: rgb(151, 50, 50);
+  width: 100%;
+  height: 100vh;
+}
+
+.window1 {
+  position: relative;
+  z-index: 99999;
+  border: 3px solid rgb(226, 222, 222);
+  background-color: #fff;
+  max-width: 480px;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.closePopup {
+  position: absolute;
+  right: 5px;
+  top: 3px;
+  cursor: pointer;
+  padding: 5px;
+  transition: color 0.25s ease;
+}
+
+.closePopup:hover {
+  color: red;
+  transition: color 0.25s ease;
+}
+
+.showPopup {
+  display: block;
 }
